[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "aiohttp_storage"
version = "0.1.0"
description = "Postgresql connection for aiohttp.web-based microservices"
authors = ["Kirill Sumorokov <sumorokov.k@gmail.com>"]
license = "MIT"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Framework :: AsyncIO",
]
packages = [
    { include = "aiohttp_storage", from = "src" },
]

[tool.poetry.dependencies]
aiohttp = "^3.6.0"
alembic = "1.4.2"
click = "^7.0"
config = {git = "https://github.com/clayman083/config.git", rev = "v0.2.4"}
databases = {extras = ["postgresql"], version = "0.3.2"}
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
coverage = "*"
faker = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-builtins-unleashed = "*"
flake8-comprehensions = "*"
flake8-import-order = "*"
flake8-print = "*"
mypy = "*"
rope = "*"
